allow overrides and matrix to be from yaml or json

--- a/pump.cabal
+++ b/pump.cabal
@@ -64,6 +64,7 @@ library
     , transformers
     , typed-process
     , unordered-containers
+    , yaml
   hs-source-dirs:
     src
   default-language:
